--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^13.0.0",
     "chart.js": "^3.9.1",
     "socket.io-client": "^4.8.1",
     "vue": "^3.5.13",
