--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@vueuse/core": "^13.0.0",
     "chart.js": "^3.9.1",
     "socket.io-client": "^4.8.1",
+    "soundfont-player": "^0.12.0",
     "vue": "^3.5.13",
     "vue-chart-3": "^3.1.8"
   },
